# chimerax-mcp-plus

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/agents/: chimerax-developer.md  chimerax-operator.md  structural-biologist.md
.claude/skills/: analyze-structure
.github/workflows/: ci.yml
docs/plans/: 2026-02-22-docs-semantic-search-design.md  2026-02-22-docs-semantic-search.md
docs/superpowers/plans/: 2026-05-19-chimerax-api-reference-tools.md  2026-05-19-rich-log-implementation.md  2026-05-19-rich-report-composer-implementation.md  2026-05-20-script-recipes.md
docs/superpowers/specs/: 2026-05-19-chimerax-api-reference-tools-design.md  2026-05-19-rich-log-design.md  2026-05-19-rich-report-composer-design.md  2026-05-20-rich-report-links-design.md  2026-05-20-script-recipes-design.md
scripts/: build_chimerax_doc_index.py
skills/analyze-structure/: SKILL.md  analyze.py
skills/explore-chimerax/: SKILL.md  build_doc_index.py
skills/explore-chimerax-commands/: SKILL.md
skills/explore-chimerax/assets/: .gitignore
skills/reference-chimerax-dev/: SKILL.md
src/chimerax_mcp/: __init__.py  __main__.py  api_docs.py  chimerax.py  commands.py  python_api.py  rich_report.py  script_recipes.py  server.py  structure_report.py
src/chimerax_mcp/docs/: __init__.py  indexer.py  (+2 more)
tests/: test_api_docs.py  test_chimerax.py  test_cli.py  test_docs_indexer.py  test_docs_search.py  test_docs_store.py  test_docs_tools.py  test_integration.py  test_python_api.py  test_script_recipes.py  test_server.py  test_structure_report.py
(+3 files in other folders)
